syntax = "proto3";

option go_package = "../pb;pb";
import "common.proto";
// 这里有多个--proto_path是因为当前proto文件中有import别的proto文件，在构建的时候这些proto文件要从--proto_path指定的多个路径去找，
// 一个没找到就回去从另一个招
// protoc --proto_path=../../../user/proto/ --proto_path=. --go_out=. ./*.proto

// 关注关系方法
message FavoriteActionReq {
  int64 user_id = 1;
  int64 video_id = 2;
  int64 action_type = 3;
}

message FavoriteActionRsp {
  CommonResponse common_rsp = 1;
}

message GetFavoriteVideoIdListReq {
  int64 user_id = 1;
}

message GetFavoriteVideoIdListRsp {
  repeated int64 video_id_list = 1; // 关注z者用户信息列表
}

service FavoriteService {
  rpc FavoriteAction(FavoriteActionReq) returns (FavoriteActionRsp); // 关联关系方法
  rpc GetFavoriteVideoIdList(GetFavoriteVideoIdListReq) returns (GetFavoriteVideoIdListRsp); // 获取喜欢的视频列表
}



